<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@mipmap/back"
            android:onClick="back"/>
        <TextView
            android:text ="@string/btn_login"
            style="@style/titlebar"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:textSize="20sp"
                android:gravity="center"
                android:text="@string/username"
                />
            <EditText
                android:id="@+id/edi_username"
                android:layout_marginLeft="20sp"
                android:background="@mipmap/login_register_edit_bg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_username"
                android:textColorHint="@android:color/darker_gray"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:textSize="20sp"
                android:gravity="center"
                android:text="@string/pwd"
                />
            <EditText
                android:id="@+id/edi_pwd"
                android:background="@mipmap/login_register_edit_bg"
                android:layout_marginLeft="20sp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="50dp"
                android:hint="@string/hint_pwd"
                android:textColorHint="@android:color/darker_gray"/>
            <ImageView
                android:id="@+id/iv_eye"
                android:layout_width="35dp"
                android:onClick="isShowPwd"
                android:clickable="true"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/eye_off"/>
        </LinearLayout>
        <Button
            android:id="@+id/btn_login"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/btn_login"
            android:textStyle="bold"
            android:background="@drawable/btn_login_selector"
            android:textSize="25sp"/>
        <TextView
            android:id="@+id/login_tv_disanfang"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/tv_login_disanfang"/>
    </LinearLayout>
</LinearLayout>